# CGType

./: .gitignore  FIX_INSTRUCTIONS.txt  README.md
include/gint/: usb-hid-kbd.h
keyboard-test/: CMakeLists.txt
math2/: CMakeLists.txt  math2-editor.c  math2.c  math2.h  usb-hid-kbd.c  usb-hid-kbd.h
src/usb/: setup.c
src/usb/classes/: hid-kbd.c
